Add Datapoint DOS.C v2.x support (#6)
* Add Datapoint file extractor

Add debug keyword in transform spec for detanglers
Clean up deprecation warnings

Signed-off-by: RetroFloppySupport <32302105+RetroFloppySupport@users.noreply.github.com>